# MVRunner

./: .gitignore  .travis.yml  .travis_compile.sh  .travis_install_dependencies.sh  CMakeLists.txt  COPYING  IDEAS  README.md  appveyor.yml  circle.yml
cmake/: FindZpg.cmake
data/: map.tmx  objects.tmx
data/characters/: .directory
data/fx/: .directory
data/languages/: spanish.txt
data/mapres/: .directory
data/shaders/: bloom.frag  blur.frag  bump.frag  chromatic_aberration.frag  flag.frag  metaball.frag  water.frag  wave.frag  wave.vert
scripts/: calc_color_int.py  generate_lang_file.py
src/base/: math.hpp  system.cpp  system.hpp
src/engine/: CAssetManager.cpp  CAssetManager.hpp  CConfig.cpp  CConfig.hpp  CGame.cpp  CGame.hpp  CLocalization.cpp  CLocalization.hpp  CNoise.cpp  CNoise.hpp  CQuadTree.hpp  CSystem.hpp  CSystemBox2D.cpp  CSystemBox2D.hpp  CSystemFx.cpp  CSystemFx.hpp  CSystemLight.cpp  CSystemLight.hpp  CSystemSound.cpp  CSystemSound.hpp  CSystemWeather.cpp  CSystemWeather.hpp  ISystem.hpp  config_vars.h
src/engine/client/: CAssetManager.cpp  CClient.cpp  CClient.hpp  CConfig.cpp  CSystemSound.hpp
src/engine/shared/: CSystemBox2D.cpp  CSystemBox2D.hpp
src/game/: CComponent.hpp  CContext.cpp  CContext.hpp  CController.cpp  CController.hpp  CEntity.cpp  CEntity.hpp  CGameClient.cpp  CGameClient.hpp  CGameServer.hpp  CMap.cpp  CMap.hpp  CPlayer.cpp  CPlayer.hpp  CUI.cpp  CUI.hpp  config_vars.h  version.h
src/game/components/: CCamera.cpp  CCamera.hpp  CControls.cpp  CControls.hpp  CDebuggerRender.cpp  CDebuggerRender.hpp  CFluidRender.cpp  CFluidRender.hpp  CHUD.cpp  CHUD.hpp  CItemRender.cpp  CItemRender.hpp  CLightRender.cpp  CLightRender.hpp  CMapRender.cpp  CMapRender.hpp  CMenus.cpp  CMenus.hpp  CParticleRender.cpp  CParticleRender.hpp  CParticleSystemRender.cpp  CParticleSystemRender.hpp  CPlayerRender.cpp  CPlayerRender.hpp  CSimpleParticleRender.cpp  CSimpleParticleRender.hpp  CUI.cpp  CUI.hpp
src/game/controllers/: CControllerMain.cpp  CControllerMain.hpp  CControllerMenu.cpp  CControllerMenu.hpp
src/game/entities/: CAmbientSound.cpp  CAmbientSound.hpp  CBox.cpp  CBox.hpp  CCharacter.cpp  CCharacter.hpp  CFire.cpp  CFire.hpp  CHitBox.cpp  CHitBox.hpp  CLight.cpp  CLight.hpp  CPChain.cpp  CPChain.hpp  CParticle.cpp  CParticle.hpp  CProjectile.cpp  CProjectile.hpp  CSign.cpp  CSign.hpp  CSimpleParticle.cpp  CSimpleParticle.hpp  CSystemParticleEmitter.cpp  CSystemParticleEmitter.hpp  CWater.cpp  CWater.hpp  CZone.cpp  CZone.hpp
src/game/entities/primitives/: CB2Chain.cpp  CB2Chain.hpp  CB2Circle.cpp  CB2Circle.hpp  CB2Polygon.cpp  CB2Polygon.hpp
tools/: zpg_packer.cpp
